# ECEN5623_RealTimeAudio

./: .gitignore  CMakeLists.txt  NOTES.md  README.md  proj.vim
include/DataStructures/: DataStructures.h
lib/AudioCapture/: CMakeLists.txt
lib/AudioCapture/include/: AudioCapture.h  AudioCapture.hpp
lib/AudioCapture/src/: AudioCapture.c  AudioCapture.cpp
lib/AudioCaptureService/: CMakeLists.txt
lib/AudioCaptureService/include/: AudioCaptureService.hpp
lib/AudioCaptureService/src/: AudioCaptureService.cpp
lib/AudioOutput/: CMakeLists.txt
lib/AudioOutput/include/: AudioOutput.h  AudioOutput.hpp
lib/AudioOutput/src/: AudioOutput.c  AudioOutput.cpp
lib/AudioPlaybackService/: CMakeLists.txt
lib/AudioPlaybackService/include/: AudioPlaybackService.hpp
lib/AudioPlaybackService/src/: AudioPlaybackService.cpp
lib/DataStructures/: CMakeLists.txt
lib/Filters/: CMakeLists.txt
lib/Filters/include/: Filters.hpp
lib/Filters/src/: Filters.c  Filters.cpp
lib/Sequencer/: CMakeLists.txt
lib/Sequencer/include/: Sequencer.hpp
lib/Sequencer/src/: Sequencer.cpp
lib/Sequencer_original/include/: Sequencer.hpp
lib/Sequencer_original/src/: Sequencer.cpp
lib/SharedAudioBuffer/: CMakeLists.txt
lib/SharedAudioBuffer/include/: SharedAudioBuffer.hpp
lib/SharedAudioBuffer/src/: SharedAudioBuffer.cpp
src/: CMakeCache.txt  CircBuff.cpp  CircBuff.hpp  Makefile  Sequencer.cpp  Sequencer.hpp  WORK_5_2.vim  alsa_effects  alsa_effects.c  alsa_effects.h  alsa_fuzz.c  cmake_install.cmake  main.c  main.cpp
src/lib/AudioCapture/: Makefile  cmake_install.cmake
src/lib/AudioCaptureService/: Makefile  cmake_install.cmake
src/lib/AudioOutput/: Makefile  cmake_install.cmake
src/lib/AudioPlaybackService/: Makefile  cmake_install.cmake
src/lib/DataStructures/: Makefile  cmake_install.cmake
src/lib/Filters/: Makefile  cmake_install.cmake
src/lib/SharedAudioBuffer/: Makefile  cmake_install.cmake
